<?xml version="1.0" encoding="utf-8"?>
<layout>


    <data>

        <variable
            name="AuthenticateFragment"
            type="com.nimius.smartbus.views.ui.fragments.AuthenticateFragment" />

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scroll_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dimen_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginStart="@dimen/dimen_20"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_punch_line"
                    style="@style/white_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/brandon_text_bold"
                    android:text="@string/str_out_to_get_you" />


                <TextView
                    style="@style/white_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_text_bold"
                    android:text="@string/str_your_booking_ref" />


                <EditText
                    android:id="@+id/et_last_name"
                    style="@style/black_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:background="@drawable/selector_input_box"
                    android:drawablePadding="@dimen/dimen_10"
                    android:drawableStart="@drawable/ic_person_grey_24dp"
                    android:fontFamily="@font/brandon_text_bold"
                    android:hint="@string/str_hint_last_name"
                    android:padding="@dimen/dimen_12"
                    android:singleLine="true"
                    android:textColorHint="@color/color_grey_placeholder" />


                <EditText
                    android:id="@+id/et_booking_number"
                    style="@style/black_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@drawable/selector_input_box"
                    android:drawablePadding="@dimen/dimen_10"
                    android:drawableStart="@drawable/ic_booking_number"
                    android:fontFamily="@font/brandon_text_bold"
                    android:hint="@string/str_hint_booking_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="@dimen/dimen_12"
                    android:singleLine="true"
                    android:textColorHint="@color/color_grey_placeholder" />


                <TextView
                    android:id="@+id/tv_find_my_bus"
                    style="@style/grey_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@drawable/shape_button_yellow_bg"
                    android:fontFamily="@font/brandon_text_bold"
                    android:gravity="center"
                    android:onClick="@{AuthenticateFragment::onButtonClick}"
                    android:padding="@dimen/dimen_12"
                    android:text="@string/str_find_bus" />


                <TextView
                    style="@style/white_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_gravity="center"
                    android:fontFamily="@font/brandon_text_bold"
                    android:text="@string/str_dont_have_booking" />


                <EditText
                    android:id="@+id/et_email_address"
                    style="@style/black_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:background="@drawable/selector_input_box"
                    android:drawablePadding="@dimen/dimen_10"
                    android:drawableStart="@drawable/ic_email_grey_24dp"
                    android:fontFamily="@font/brandon_text_bold"
                    android:hint="@string/str_hint_email_address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dimen_12"
                    android:singleLine="true"
                    android:textColorHint="@color/color_grey_placeholder" />


                <TextView
                    android:id="@+id/tv_send_magic_link"
                    style="@style/grey_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@drawable/shape_button_yellow_bg"
                    android:fontFamily="@font/brandon_text_bold"
                    android:gravity="center"
                    android:onClick="@{AuthenticateFragment::onButtonClick}"
                    android:padding="@dimen/dimen_12"
                    android:text="@string/str_send_magic_link" />

            </LinearLayout>


        </ScrollView>


        <!--<TextView-->

        <!--android:id="@+id/tv_where_bus"-->
        <!--style="@style/white_16"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/color_trans_15"-->
        <!--android:fontFamily="@font/brandon_text_bold"-->
        <!--android:onClick="@{AuthenticateFragment::onButtonClick}"-->
        <!--android:padding="@dimen/dimen_18"-->
        <!--android:text="@string/str_where_my_bus"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintHorizontal_chainStyle="spread"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/tv_tours_activities" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_tours_activities"-->
        <!--style="@style/white_16"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/color_trans_10"-->
        <!--android:fontFamily="@font/brandon_text_bold"-->
        <!--android:onClick="@{AuthenticateFragment::onButtonClick}"-->
        <!--android:padding="@dimen/dimen_18"-->
        <!--android:text="@string/str_tours_activities"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/tv_where_bus"-->
        <!--app:layout_constraintRight_toRightOf="parent" />-->


        <include layout="@layout/include_progress_wait"/>


    </android.support.constraint.ConstraintLayout>
</layout>