<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="MenuDialogFragment"
            type="com.nimius.smartbus.views.ui.fragments.MenuDialogFragment" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_close_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{MenuDialogFragment::onButtonClick}"
            android:src="@drawable/ic_close_24dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_pick_info"
            style="@style/white_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
            android:fontFamily="@font/brandon_text_bold"
            android:onClick="@{MenuDialogFragment::onButtonClick}"
            android:padding="@dimen/dimen_10"
            android:text="@string/str_pick_up_info"
            app:layout_constraintTop_toBottomOf="@+id/iv_close_menu" />


        <TextView
            android:id="@+id/tv_terminal"
            style="@style/white_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
            android:fontFamily="@font/brandon_text_bold"
            android:onClick="@{MenuDialogFragment::onButtonClick}"
            android:padding="@dimen/dimen_10"
            android:text="@string/str_terminal"
            app:layout_constraintTop_toBottomOf="@+id/tv_pick_info" />


        <TextView
            android:id="@+id/tv_contact_support"
            style="@style/white_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
            android:fontFamily="@font/brandon_text_bold"
            android:onClick="@{MenuDialogFragment::onButtonClick}"
            android:padding="@dimen/dimen_10"
            android:text="@string/str_contact_support"
            app:layout_constraintTop_toBottomOf="@+id/tv_terminal" />

        <TextView
            android:id="@+id/tv_missed_pickup"
            style="@style/white_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
            android:fontFamily="@font/brandon_text_bold"
            android:onClick="@{MenuDialogFragment::onButtonClick}"
            android:padding="@dimen/dimen_10"
            android:text="@string/str_missed_pickup"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_support" />





        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimen_15"
            android:background="@android:color/white"
            android:padding="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/tv_missed_pickup" />

    </android.support.constraint.ConstraintLayout>
</layout>