<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1" />

        <ScrollView
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/dimen_20">


                <TextView
                    android:id="@+id/tv_top_info"
                    style="@style/black_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:fontFamily="@font/brandon_text_regular"
                    android:visibility="gone"
                    tools:text="@string/str_pick_up_top_info" />


                <TextView
                    android:id="@+id/tv_middle_info"
                    style="@style/black_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:fontFamily="@font/brandon_text_bold"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_top_info"
                    tools:text="@string/str_pick_up_middle_info" />


                <TextView
                    android:id="@+id/tv_bottom_info"
                    style="@style/black_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:fontFamily="@font/brandon_text_regular"
                    app:layout_constraintTop_toBottomOf="@+id/tv_middle_info"
                    tools:text="@string/str_pick_up_bottom_info" />
            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_middle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top">

            <LinearLayout
                android:id="@+id/layout_pickup_info_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="vertical"
                android:paddingEnd="@dimen/dimen_30"
                android:paddingStart="@dimen/dimen_30">

                <TextView
                    android:id="@+id/tv_pickup_info_search"
                    style="@style/black_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_text_regular"
                    android:text="@string/str_pick_up_info_search" />

                <View
                    android:id="@+id/view_middle"
                    android:layout_width="@dimen/dimen_200"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pickup_info_search" />


                <AutoCompleteTextView
                    android:id="@+id/auto_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@drawable/shape_autocomplete_bg"
                    android:drawableRight="@drawable/ic_arrow_drop_down_24dp"
                    android:fontFamily="@font/brandon_text_regular"
                    android:hint="@string/str_select"
                    android:padding="@dimen/dimen_8"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/view_middle">

                </AutoCompleteTextView>

                <TextView
                    android:id="@+id/tv_take_look_map"
                    style="@style/black_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:fontFamily="@font/brandon_text_regular"
                    android:text="@string/str_look_map"
                    app:layout_constraintTop_toBottomOf="@+id/auto_location" />

            </LinearLayout>


            <!--<LinearLayout-->
            <!--android:id="@+id/layout_bus_pickup"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/dimen_10"-->
            <!--android:background="@color/color_blue_english"-->
            <!--android:gravity="center"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/layout_pickup_info_search">-->

            <!--<TextView-->
            <!--android:id="@+id/tv_bus_pickup_city_center"-->
            <!--style="@style/white_16"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableEnd="@drawable/ic_star"-->
            <!--android:drawablePadding="@dimen/dimen_10"-->
            <!--android:drawableStart="@drawable/ic_bus_pickup"-->
            <!--android:fontFamily="@font/brandon_text_bold"-->
            <!--android:padding="@dimen/dimen_5"-->
            <!--android:text="@string/str_bus_pick_city_center" />-->

            <!--</LinearLayout>-->

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_pickup_info_search" />


        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <include layout="@layout/include_progress_wait" />

    </android.support.constraint.ConstraintLayout>
</layout>